# ArtX

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  README.zh-CN.md  main.py  pyproject.toml
.github/workflows/: ci.yml  smoke-download.yml
docs/: README.zh-CN.md  architecture.md  development.md  large-images.md  metadata.md  project-status.md  usage.md
docs/adr/: 0001-http-client-direction.md  0002-large-artwork-reliability.md  0003-ui-after-core-reliability.md
docs/releases/: v0.1.0.md  v0.2.0.md  v0.3.1.md
scripts/: generate_readme_assets.py
src/artx/cli/: args.py
src/artx/download/: image_writer.py
src/googleart_download/: batch.py  batch_state.py  cli.py  cli_args.py  cli_inputs.py  cli_output.py  errors.py  logging_utils.py  models.py  reporters.py
src/googleart_download/batch/: manager.py  state.py
src/googleart_download/cli/: __init__.py  args.py  inputs.py  main.py
src/googleart_download/download/: cache.py  downloader.py  http_client.py  image_writer.py  size_selection.py  tiles.py
src/googleart_download/reporting/: cli.py  tui.py
tests/: test_batch_manager.py  test_cli.py  test_errors.py  test_http_client.py  test_integration_workflows.py  test_metadata_output.py  test_reporters.py  test_tile_cache.py
tests/fixtures/: smoke_assets.json
